pojasnjevanje na grafih, na koliko domenah je bil pognan graf

--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -382,7 +382,7 @@ V nasprotju s tem se čas paralelnega izvajanja povečuje manj intenzivno, kot j
 
 \begin{figure}[h!]
   \centering
-  \caption{Čas izračuna Fibonaccijevih števil v odvisnosti od zahtevanega Fibonaccijevega števila: Paralelno in neparalelno}
+  \caption{Čas izračuna Fibonaccijevih števil v odvisnosti od zahtevanega Fibonaccijevega števila: Paralelno in neparalelno. Paralelno verzijo smo pognali na 9 domenah.}
   \includegraphics[width=15cm]{slike/fib_par_v_odvisnosti_od_n.pdf}
   \label{fig:fib_par_v_odvisnosti_od_n}
 \end{figure}
@@ -640,7 +640,7 @@ tudi pri drugih faktorjih minimizacije.
 
 \begin{figure}[h!]
   \centering
-  \caption{Čas izračuna BFS algoritma v odvisnosti od števila vozlišč ter povezav}
+  \caption{Čas izračuna BFS algoritma v odvisnosti od števila povezav. Paralelno verzijo smo pognali na 6 domenah.}
   \includegraphics[width=15cm]{slike/bfs_v_odvisnosti_od_velikosti_grafa.pdf}
   \label{fig:bfs_calculation_time_by_graph_size}
 \end{figure}
@@ -850,7 +850,7 @@ na večjih grafih razlika med časom izračuna sekvenčne in paralelne verzije a
 
 \begin{figure}[h!]
   \centering
-  \caption{Primerjava časov izračuna sekvenčne in paralelne implementacije Dijkstrovega algoritma v odvisnosti od velikosti grafa}
+  \caption{Primerjava časov izračuna sekvenčne in paralelne implementacije Dijkstrovega algoritma v odvisnosti od velikosti grafa. Paralelno verzijo smo pognali na 3 domenah.}
   \includegraphics[width=15cm]{slike/dijkstra_v_odvisnosti_od_velikosti_grafa.pdf}
   \label{fig:dijkstra_calculation_time_by_graph_size}
 \end{figure}
@@ -980,7 +980,7 @@ potrebuje približno 4-krat več časa za izračun za grafih različnih velikost
 
 \begin{figure}[h!]
   \centering
-  \caption{Primerjava časov izračuna sekvenčne in paralelne implementacije Floyd-Warshallovega algoritma v odvisnosti od števila vozlišč. Paralelno verzijo smo pognali s 6 domenami.}
+  \caption{Primerjava časov izračuna sekvenčne in paralelne implementacije Floyd-Warshallovega algoritma v odvisnosti od števila vozlišč. Paralelno verzijo smo pognali na 6 domenah.}
   \includegraphics[width=15cm]{slike/floyd_v_odvisnosti_od_velikosti_grafa.pdf}
   \label{fig:floyd_v_odvisnosti_od_velikosti_grafa}
 \end{figure}
