--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -677,7 +677,7 @@ Na koncu bomo predstavili analizo časovne učinkovitosti paralelnega Dijkstrove
 Vrsta s prednostjo igra osrednjo vlogo v Dijkstrovem algoritmu, saj omogoča učinkovit izbor naslednjega vozlišča za raziskovanje. 
 Pri tem je pomembno, da je zaradi skupnega pomnilnika vrsta s prednostjo nespremenljiva, saj je sicer treba
 dodatno skrbeti, da ne pride do konfliktov pri dostopu ter spreminjanju skupnega pomnilnika (ang. thread race). 
-Definirali smo modul PQ, kjer vsak element v kopici predstavlja vozlišče s prednostno vrednostjo ter levim in desnim poddrevesom
+Definirali smo modul PQ, kjer vsak element v kopici predstavlja vozlišče s prednostjo ter levim in desnim poddrevesom
 (označeno s tipom \texttt{t} v \ref{lst:pq_sig}). Implementacija vrste s prednostjo je povzeta po \cite{okasaki1996}.
 
 \begin{lstlisting}[label=lst:pq_sig]
@@ -698,8 +698,8 @@ end
 \end{lstlisting}
 
 Glavni operaciji vrste - vstavljanje in izločanje obe sledita istemu principu. Preko ujemanja vzorcev (ang. pattern matching)
-primerjamo prednostno vrednost trenutnega korena z vrednostjo, ki jo vstavljamo ali izločamo. V odvisnosti od primerjave trenutne
-prednostne vrednosti z vrednostjo, ki jo vstavljamo ali izločamo, se izvede ustrezna operacija. Za preprečevanje izrojenih dreves
+primerjamo prednost trenutnega korena z vrednostjo, ki jo vstavljamo ali izločamo. V odvisnosti od primerjave trenutne
+prednosti z vrednostjo, ki jo vstavljamo ali izločamo, se izvede ustrezna operacija. Za preprečevanje izrojenih dreves
 se uporablja rotacija poddreves, kar pomaga ohranjati uravnoteženost. Implementacija funkcije \texttt{insert} je prikazana
 v \ref{lst:pq_insert}.
 
@@ -738,7 +738,7 @@ end
 \end{lstlisting}
 
 V najslabšem primeru je časovna zahtevnost $O(n)$. To se bo namreč zgodilo natanko tedaj, ko bomo ob vsakem vstavljanju
-vstavili element z največjo prednostno vrednostjo ter ga nam bo uspelo vstaviti pod list z največjo globino v drevesu (tedaj
+vstavili element z največjo prednostjo ter ga nam bo uspelo vstaviti pod list z največjo globino v drevesu (tedaj
 rečemo, da je drevo izrojeno). To pa se bo zgodilo redko, saj ob vsakem rekurzivnem klicu premešamo poddrevesa.
 Posledično se bo verjetnost, da se bo zgodil najslabši primer, manjšala eksponentno z globino drevesa \cite{okasaki1996}.
 
@@ -810,7 +810,7 @@ Res: Če bi namreč dve niti hkrati posodobili razdaljo do nekega vozlišča, bi
 posodobila razdaljo, preden bi druga nit imela priložnost posodobiti svojo razdaljo. To bi lahko privedlo do nekonsistentne razdalje
 do tega vozlišča. Za primerjavo bo napačna implementacija paralelnega Dijkstrovega algoritma tudi obravnavana v analizi časa izračunov algoritmov.
 
-Da bi rešili problem tveganega stanja v paralelni implementaciji Dijkstrovega algoritma, smo se odločili za uporabo mehanizmov medsebojnega izključevanja.
+Da bi rešili problem tveganega stanja v paralelni implementaciji Dijkstrovega algoritma, smo se odločili za uporabo mehanizmov medsebojnega izključevanja (mutex).
 Ti mehanizmi zagotavljajo sinhronizacijo med več procesorskimi niti ter s tem preprečijo tvegano stanje. V našem primeru smo mehanizme medsebojnega
 izključevanja uporabili za sinhronizacijo dostopa do vrste s prednostjo.
 
