konsistentno uporabljaj besedo 'parallelisation' namestno enkrat 'parallelisation', drugic 'parallelization'

--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -37,7 +37,7 @@ Kljub temu pa smo identificirali tudi omejitve pri izboljšavah učinkovitosti z
 
 % - povzetek v angleščini
 \abstract{
-This thesis addresses the parallelization of graph algorithms in functional programming languages, with a focus on OCaml and the use of the Domainslib library.
+This thesis addresses the parallelisation of graph algorithms in functional programming languages, with a focus on OCaml and the use of the Domainslib library.
 The work concentrates on developing and analyzing parallel versions of classical algorithms, such as breadth-first search (BFS), Dijkstra's algorithm, and the Floyd-Warshall algorithm.
 The primary goal is to compare the effectiveness of parallel and sequential implementations of these algorithms in the context of functional programming.
 The analysis showed that parallel implementation can improve efficiency, especially in extensive graphs. 
@@ -56,7 +56,7 @@ However, improvements in efficiency are also identified to have limitations due 
 
 % - angleško-slovenski slovar strokovnih izrazov
 \slovar{
-  \geslo{paralelizacija}{parallelization}
+  \geslo{paralelizacija}{parallelisation}
   \geslo{grafovski algoritmi}{graph algorithms}
   \geslo{funkcijski programski jeziki}{functional programming languages}
   \geslo{OCaml}{OCaml}
