--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -1,5 +1,4 @@
-\documentclass[mat1, tisk]{fmfdelo}
-% \documentclass[fin1, tisk]{fmfdelo}
+\documentclass[fin1, tisk]{fmfdelo}
 % Če pobrišete možnost tisk, bodo povezave obarvane,
 % na začetku pa ne bo praznih strani po naslovu, …
 
