--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -27,20 +27,12 @@
 %   V povzetku na kratko opišite vsebinske rezultate dela. Sem ne sodi razlaga
 %   organizacije dela, torej v katerem razdelku je kaj, pač pa le opis vsebine.
 \povzetek{
-Diplomska naloga obravnava paralelizacijo grafovskih algoritmov v funkcijskih programskih jezikih, s poudarkom na OCamlu in uporabi knjižnice Domainslib. 
-Delo se osredotoča na razvoj in analizo paralelnih različic klasičnih algoritmov, kot so iskanje v širino (BFS), Dijkstrov algoritem in Floyd-Warshallov algoritem. 
-Glavni cilj je primerjava učinkovitosti paralelnih in sekvenčnih implementacij teh algoritmov v kontekstu funkcijskega programiranja. 
-Analiza je pokazala, da paralelna implementacija lahko izboljša učinkovitost, še posebej pri obsežnih grafih.
-Kljub temu pa smo identificirali tudi omejitve pri izboljšavah učinkovitosti zaradi same narave paralelnega izvajanja.
+Diplomska naloga obravnava paralelizacijo grafovskih algoritmov v funkcijskih programskih jezikih, s poudarkom na OCamlu in uporabi knjižnice Domainslib. Delo se osredotoča na razvoj in analizo paralelnih različic klasičnih algoritmov, kot so iskanje v širino (BFS), Dijkstrov algoritem in Floyd-Warshallov algoritem. Glavni cilj je primerjava učinkovitosti paralelnih in sekvenčnih implementacij teh algoritmov v kontekstu funkcijskega programiranja. Analiza je pokazala, da paralelna implementacija lahko izboljša učinkovitost, še posebej pri obsežnih grafih. Kljub temu pa smo identificirali tudi omejitve pri izboljšavah učinkovitosti zaradi same narave paralelnega izvajanja.
 }
 
 % - povzetek v angleščini
 \abstract{
-This thesis addresses the parallelisation of graph algorithms in functional programming languages, with a focus on OCaml and the use of the Domainslib library.
-The work concentrates on developing and analyzing parallel versions of classical algorithms, such as breadth-first search (BFS), Dijkstra's algorithm, and the Floyd-Warshall algorithm.
-The primary goal is to compare the effectiveness of parallel and sequential implementations of these algorithms in the context of functional programming.
-The analysis showed that parallel implementation can improve efficiency, especially in extensive graphs. 
-However, improvements in efficiency are also identified to have limitations due to the inherent nature of parallel execution.
+This thesis addresses the parallelisation of graph algorithms in functional programming languages, with a focus on OCaml and the use of the Domainslib library. The work concentrates on developing and analyzing parallel versions of classical algorithms, such as breadth-first search (BFS), Dijkstra's algorithm, and the Floyd-Warshall algorithm. The primary goal is to compare the effectiveness of parallel and sequential implementations of these algorithms in the context of functional programming. The analysis showed that parallel implementation can improve efficiency, especially in extensive graphs. However, improvements in efficiency are also identified to have limitations due to the inherent nature of parallel execution.
 }
 
 % - klasifikacijske oznake, ločene z vejicami
